# powerpoint-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  server.py  server.sh
scripts/: download_phosphor.py
tools/: __init__.py  content.py  evaluate.py  icons.py  modify.py  presentation.py  shape_utils.py  slides.py  svg_embed.py
